--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 <body>
     <div>
         <table>
+            <tr>
+                <td colspan="3"> ellos </td>
+            
+            </tr>
             <tr> <!-- para hacer filas -->
                 
                 <th>nombre</th>
@@ -16,13 +20,12 @@
                 <th>hobby</th>      <!--columnas -->
             </tr>
                 <td> juan </td>
-                <td> quintero </td>
+                <td rowspan="2"> quintero jaramillo </td> <!-- juntar filas-->
                 <td class=" juan ">  correr </td>
             </tr>
             <tr>
                 <td id="laura"> laura </td>
-                <td> jaramillo </td>
-                <td> leer </td>
+                <td id="leer "> leer </td>
             </tr>
             </tr>
 
